<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="32dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/teal_700">

        <EditText
            android:id="@+id/et_dialog"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_edit_text"
            android:elevation="6dp"
            android:ems="10"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/to_do"
            android:inputType="text"
            android:paddingStart="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_dialog" />

        <TextView
            android:id="@+id/tv_title_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:elevation="6dp"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/add_new_task"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/LLDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_dialog">

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/fab_date_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/teal_100"
                android:elevation="6dp"
                android:fontFamily="@font/ubuntu_regular"
                android:gravity="center"
                android:text="@string/pick_date"
                android:textAllCaps="false"
                app:icon="@drawable/date_range_24px"
                app:iconGravity="textStart" />


            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/fab_time_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/teal_100"
                android:elevation="6dp"
                android:fontFamily="@font/ubuntu_regular"
                android:gravity="center"
                android:text="@string/pick_time"
                android:textAllCaps="false"
                app:icon="@drawable/alarm_24px"
                app:iconGravity="textStart" />
        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_dialog_save"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/teal_100"
            android:elevation="8dp"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:cornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LLDialog" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>