<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:paddingStart="12dp"
    android:paddingTop="32dp"
    android:paddingEnd="12dp"
    android:paddingBottom="32dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/editBtn_bottomSheet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_bottom_sheet"
        android:elevation="4dp"
        android:fontFamily="@font/ubuntu_bold"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:text="@string/edit"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/deleteBtn_bottomSheet"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/deleteBtn_bottomSheet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/bg_btn_bottom_sheet3"
        android:elevation="4dp"
        android:fontFamily="@font/ubuntu_bold"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:text="@string/delete"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/doneBtn_bottomSheet"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/editBtn_bottomSheet"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/doneBtn_bottomSheet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_bottom_sheet2"
        android:elevation="4dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:backgroundTint="@null"
        app:icon="@drawable/check_24px"
        app:iconGravity="textEnd"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1.5"
        app:layout_constraintStart_toEndOf="@+id/deleteBtn_bottomSheet"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
